@@ -2,6 +2,7 @@ package uk.gov.hmcts.reform.prl.services.managedocuments;
 
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
@@ -11,6 +12,12 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.MockitoJUnitRunner;
+import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.Resource;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.multipart.MultipartFile;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
 import uk.gov.hmcts.reform.ccd.client.CoreCaseDataApi;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
@@ -18,8 +25,12 @@ import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.ccd.client.model.CategoriesAndDocuments;
 import uk.gov.hmcts.reform.ccd.client.model.Category;
 import uk.gov.hmcts.reform.ccd.client.model.Document;
+import uk.gov.hmcts.reform.ccd.document.am.feign.CaseDocumentClient;
+import uk.gov.hmcts.reform.ccd.document.am.feign.CaseDocumentClientApi;
+import uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse;
+import uk.gov.hmcts.reform.ccd.document.am.util.InMemoryMultipartFile;
 import uk.gov.hmcts.reform.idam.client.models.UserDetails;
-import uk.gov.hmcts.reform.prl.enums.RestrictToCafcassHmcts;
+import uk.gov.hmcts.reform.prl.enums.YesOrNo;
 import uk.gov.hmcts.reform.prl.enums.managedocuments.DocumentPartyEnum;
 import uk.gov.hmcts.reform.prl.models.Element;
 import uk.gov.hmcts.reform.prl.models.common.dynamic.DynamicList;
@@ -27,7 +38,10 @@ import uk.gov.hmcts.reform.prl.models.common.dynamic.DynamicListElement;
 import uk.gov.hmcts.reform.prl.models.complextypes.QuarantineLegalDoc;
 import uk.gov.hmcts.reform.prl.models.complextypes.managedocuments.ManageDocuments;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
+import uk.gov.hmcts.reform.prl.models.dto.ccd.DocumentManagementDetails;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.ReviewDocuments;
+import uk.gov.hmcts.reform.prl.services.CoreCaseDataService;
+import uk.gov.hmcts.reform.prl.services.SystemUserService;
 import uk.gov.hmcts.reform.prl.services.UserService;
 import uk.gov.hmcts.reform.prl.utils.CaseUtils;
 
@@ -39,28 +53,51 @@ import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
+import static org.springframework.http.MediaType.APPLICATION_PDF_VALUE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CAFCASS_ROLE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CONFIDENTIAL_DOCUMENTS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COURT_ADMIN_ROLE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.JUDGE_ROLE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOA_MULTIPART_FILE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOLICITOR_ROLE;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.nullSafeCollection;
 
-@RunWith(MockitoJUnitRunner.class)
+@RunWith(MockitoJUnitRunner.Silent.class)
 public class ManageDocumentsServiceTest {
 
     @InjectMocks
     ManageDocumentsService manageDocumentsService;
 
     @Mock
-    ObjectMapper objectMapper;
+    private ObjectMapper objectMapper;
 
     @Mock
     private CoreCaseDataApi coreCaseDataApi;
+
+    @Mock
+    CoreCaseDataService coreCaseDataService;
+
+    @Mock
+    SystemUserService systemUserService;
+
+    @Mock
+    CaseDocumentClient caseDocumentClient;
+
+    @Mock
+    private CaseDocumentClientApi caseDocumentClientApi;
 
     @Mock
     CaseUtils caseUtils;
@@ -80,6 +117,8 @@ public class ManageDocumentsServiceTest {
     Element<QuarantineLegalDoc> quarantineLegalDocElement;
 
     Document document;
+
+    uk.gov.hmcts.reform.prl.models.documents.Document document1;
 
     Category subCategory1;
     Category subCategory2;
@@ -109,22 +148,32 @@ public class ManageDocumentsServiceTest {
 
     UserDetails userDetailsCafcassRole;
 
-    UserDetails userDetailsCourtStaffRole;
+    UserDetails userDetailsCourtAdminRole;
+    UserDetails userDetailsCourtStaffRoleExpectAdmin;
 
     List<String> categoriesToExclude;
 
-    RestrictToCafcassHmcts restrictToCafcassHmcts = RestrictToCafcassHmcts.restrictToGroup;
+
+    uk.gov.hmcts.reform.prl.models.documents.Document caseDoc;
+
+    uk.gov.hmcts.reform.prl.models.documents.Document confidentialDoc;
+
+    QuarantineLegalDoc quarantineConfidentialDoc;
+
+    QuarantineLegalDoc quarantineCaseDoc;
 
     @Before
     public void init() {
 
+        objectMapper.registerModule(new JavaTimeModule());
+
         document = new Document("documentURL", "fileName", "binaryUrl", "attributePath", LocalDateTime.now());
 
-        subCategory1 = new Category("subCategory1Id", "subCategory1Name", 1, List.of(document), null);
-        subCategory2 = new Category("subCategory2Id", "subCategory2Name", 1, List.of(document), List.of(subCategory1));
+        subCategory1 = new Category("confidential", "confidentialName", 1, List.of(document), null);
+        subCategory2 = new Category("subCategory2Id", "subCategory2Name", 1, List.of(document), null);
 
-        category = new Category("categoryId", "categoryName", 2, List.of(document), List.of(subCategory2));
-        categoriesToExclude = Arrays.asList("citizenQuarantine", "legalProfQuarantine", "cafcassQuarantine");
+        category = new Category("MIAMCertificate", "MIAM Certificate", 2, List.of(document), List.of(subCategory1,subCategory2));
+        categoriesToExclude = Arrays.asList("citizenQuarantine", "legalProfQuarantine", "cafcassQuarantine", "courtStaffQuarantine", "confidential");
 
         categoriesAndDocuments = new CategoriesAndDocuments(1, List.of(category), List.of(document));
 
@@ -136,7 +185,7 @@ public class ManageDocumentsServiceTest {
         dynamicListElementList = new ArrayList<>();
         CaseUtils.createCategorySubCategoryDynamicList(parentCategories, dynamicListElementList, categoriesToExclude);
 
-        dynamicList = DynamicList.builder().value(DynamicListElement.EMPTY)
+        dynamicList = DynamicList.builder().value(DynamicListElement.builder().code("MIAMCertificate").label("MIAM Certificate").build())
             .listItems(dynamicListElementList).build();
 
         userDetailsSolicitorRole = UserDetails.builder()
@@ -150,12 +199,62 @@ public class ManageDocumentsServiceTest {
             .surname("test")
             .roles(Collections.singletonList(CAFCASS_ROLE))
             .build();
-        userDetailsCourtStaffRole = UserDetails.builder()
+        userDetailsCourtAdminRole = UserDetails.builder()
             .forename("test")
             .surname("test")
             .roles(Collections.singletonList(COURT_ADMIN_ROLE))
             .build();
+        userDetailsCourtStaffRoleExpectAdmin = UserDetails.builder()
+            .forename("test")
+            .surname("test")
+            .roles(Collections.singletonList(JUDGE_ROLE))
+            .build();
 
+        confidentialDoc = uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+            .documentFileName("Confidential_test.pdf")
+            .documentUrl("http://dm-store.com/documents/7ab2e6e0-c1f3-49d0-a09d-771ab99a2f15")
+            .build();
+
+        caseDoc = uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+            .documentFileName("test.pdf")
+            .documentUrl("http://dm-store.com/documents/7ab2e6e0-c1f3-49d0-a09d-771ab99a2f15")
+            .build();
+
+        quarantineConfidentialDoc = QuarantineLegalDoc.builder()
+            .documentParty(DocumentPartyEnum.APPLICANT.getDisplayedValue())
+            .categoryId("MIAMCertificate")
+            .miamCertificateDocument(confidentialDoc)
+            .documentUploadedDate(LocalDateTime.now())
+            .build();
+
+        quarantineCaseDoc = QuarantineLegalDoc.builder()
+            .documentParty(DocumentPartyEnum.APPLICANT.getDisplayedValue())
+            .categoryId("MIAMCertificate")
+            .miamCertificateDocument(caseDoc)
+            .documentUploadedDate(LocalDateTime.now())
+            .build();
+
+        document1 = uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+            .documentFileName("test.pdf")
+            .documentUrl("http://dm-store.com/documents/7ab2e6e0-c1f3-49d0-a09d-771ab99a2f15")
+            .build();
+
+        Resource expectedResource = new ClassPathResource("task-list-markdown.md");
+        HttpHeaders headers = new HttpHeaders();
+        ResponseEntity<Resource> expectedResponse = new ResponseEntity<>(expectedResource, headers, HttpStatus.OK);
+        when(caseDocumentClient
+                 .getDocumentBinary(Mockito.anyString(), Mockito.anyString(), Mockito.any(UUID.class)))
+            .thenReturn(expectedResponse);
+
+        byte[] pdf = new byte[]{1,2,3,4,5};
+        MultipartFile file = new InMemoryMultipartFile(SOA_MULTIPART_FILE,
+                                                       "Confidential_" + document1.getDocumentFileName(),
+                                                       APPLICATION_PDF_VALUE, pdf);
+        uk.gov.hmcts.reform.ccd.document.am.model.Document document = testDocument();
+        UploadResponse uploadResponse = new UploadResponse(List.of(document));
+        Mockito.when(caseDocumentClient.uploadDocuments(anyString(), anyString(), anyString(), anyString(), anyList()))
+            .thenReturn(uploadResponse);
+        Mockito.doNothing().when(caseDocumentClient).deleteDocument(anyString(), anyString(), any(UUID.class), anyBoolean());
 
 
     }
@@ -163,6 +262,34 @@ public class ManageDocumentsServiceTest {
     @Test
     public void testPopulateDocumentCategories() {
         when(authTokenGenerator.generate()).thenReturn(serviceAuthToken);
+
+        when(coreCaseDataApi.getCategoriesAndDocuments(
+            any(),
+            any(),
+            any()
+        )).thenReturn(categoriesAndDocuments);
+
+        CaseData caseData = CaseData.builder().build();
+
+        CaseData updatedCaseData = manageDocumentsService.populateDocumentCategories(auth, caseData);
+        String docCode = updatedCaseData.getDocumentManagementDetails()
+            .getManageDocuments().get(0).getValue().getDocumentCategories().getListItems()
+            .get(0).getCode();
+        assertEquals(subCategory2.getCategoryId(), docCode);
+
+    }
+
+    @Test
+    public void testPopulateDocumentCategoriesExcludeCategory() {
+        when(authTokenGenerator.generate()).thenReturn(serviceAuthToken);
+
+        Document document = new Document("documentURL", "fileName", "binaryUrl", "attributePath", LocalDateTime.now());
+
+        Category confidentialCate = new Category("confidential", "confidentialName", 1, List.of(document), null);
+
+        Category category = new Category("categoryId", "categoryName", 2, List.of(document), List.of(confidentialCate));
+
+        CategoriesAndDocuments categoriesAndDocuments = new CategoriesAndDocuments(1, List.of(category), List.of(document));
 
         when(coreCaseDataApi.getCategoriesAndDocuments(
             Mockito.any(),
@@ -173,8 +300,9 @@ public class ManageDocumentsServiceTest {
         CaseData caseData = CaseData.builder().build();
 
         CaseData updatedCaseData = manageDocumentsService.populateDocumentCategories(auth, caseData);
-        String docCode  = updatedCaseData.getManageDocuments().get(0).getValue().getDocumentCategories().getListItems().get(0).getCode();
-        assertEquals("subCategory1Id",docCode);
+        List categoryList = updatedCaseData.getDocumentManagementDetails().getManageDocuments().get(0)
+            .getValue().getDocumentCategories().getListItems();
+        assertEquals(0, categoryList.size());
     }
 
     @Test
@@ -183,7 +311,8 @@ public class ManageDocumentsServiceTest {
         when(authTokenGenerator.generate()).thenThrow(new RuntimeException());
         CaseData caseData = CaseData.builder().build();
         CaseData updatedCaseData = manageDocumentsService.populateDocumentCategories(auth, caseData);
-        List<DynamicListElement> listItems  = updatedCaseData.getManageDocuments().get(0).getValue().getDocumentCategories().getListItems();
+        List<DynamicListElement> listItems = updatedCaseData.getDocumentManagementDetails().getManageDocuments()
+            .get(0).getValue().getDocumentCategories().getListItems();
         Assert.assertEquals(null, listItems);
     }
 
@@ -193,7 +322,8 @@ public class ManageDocumentsServiceTest {
         ManageDocuments manageDocuments = ManageDocuments.builder()
             .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
             .documentCategories(dynamicList)
-            .documentRestrictCheckbox(List.of(restrictToCafcassHmcts))
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
             .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
             .build();
 
@@ -201,6 +331,7 @@ public class ManageDocumentsServiceTest {
         caseDataMapInitial.put("manageDocuments",manageDocuments);
 
         List<Element<QuarantineLegalDoc>> legalProfQuarantineDocsListInitial = new ArrayList<>();
+        legalProfQuarantineDocsListInitial.add(element(QuarantineLegalDoc.builder().build()));
         caseDataMapInitial.put("legalProfQuarantineDocsList",legalProfQuarantineDocsListInitial);
 
         List<Element<QuarantineLegalDoc>> legalProfUploadDocListDocTabInitial = new ArrayList<>();
@@ -215,73 +346,22 @@ public class ManageDocumentsServiceTest {
 
         CaseData caseData = CaseData.builder()
             .reviewDocuments(reviewDocuments)
-            .manageDocuments(List.of(manageDocumentsElement)).build();
-        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
-        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
-
-        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
-        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
-        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
-
-        Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
-
-        legalProfQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("legalProfQuarantineDocsList");
-
-        legalProfUploadDocListDocTab = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("legalProfUploadDocListDocTab");
-
-        assertNull(caseDataMapUpdated.get("manageDocuments"));
-        assertEquals(1,legalProfQuarantineDocsList.size());
-        assertEquals(0,legalProfUploadDocListDocTab.size());
-    }
-
-    @Test
-    public void testCopyDocumentIfRestrictedWithSoliRoleWithNonEmptyLegalProfUploadDocListDocTab() {
-
-        ManageDocuments manageDocuments = ManageDocuments.builder()
-            .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
-            .documentCategories(dynamicList)
-            .documentRestrictCheckbox(List.of(restrictToCafcassHmcts))
-            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
             .build();
-
-        Map<String, Object> caseDataMapInitial = new HashMap<>();
-        caseDataMapInitial.put("manageDocuments",manageDocuments);
-
-        List<Element<QuarantineLegalDoc>> legalProfQuarantineDocsListInitial = new ArrayList<>();
-        caseDataMapInitial.put("legalProfQuarantineDocsList",legalProfQuarantineDocsListInitial);
-
-        List<Element<QuarantineLegalDoc>> legalProfUploadDocListDocTabInitial = new ArrayList<>();
-
-
-        manageDocumentsElement = element(manageDocuments);
-
-        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder().build();
-        quarantineLegalDocElement = element(quarantineLegalDoc);
-
-        legalProfUploadDocListDocTabInitial.add(quarantineLegalDocElement);
-        caseDataMapInitial.put("legalProfUploadDocListDocTab",legalProfUploadDocListDocTabInitial);
-
-        ReviewDocuments reviewDocuments = ReviewDocuments.builder().legalProfUploadDocListDocTab(legalProfUploadDocListDocTabInitial).build();
-
-        CaseData caseData = CaseData.builder()
-            .reviewDocuments(reviewDocuments)
-            .manageDocuments(List.of(manageDocumentsElement)).build();
         CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
         CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
 
         when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
-        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
         when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
 
         Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
 
         legalProfQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("legalProfQuarantineDocsList");
-
-        legalProfUploadDocListDocTab = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("legalProfUploadDocListDocTab");
-
-        assertNull(caseDataMapUpdated.get("manageDocuments"));
+        assertNotNull(legalProfQuarantineDocsList);
         assertEquals(1,legalProfQuarantineDocsList.size());
-        assertEquals(1,legalProfUploadDocListDocTab.size());
+        assertNull(caseDataMapUpdated.get("manageDocuments"));
     }
 
     @Test
@@ -290,7 +370,8 @@ public class ManageDocumentsServiceTest {
         ManageDocuments manageDocuments = ManageDocuments.builder()
             .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
             .documentCategories(dynamicList)
-            .documentRestrictCheckbox(List.of(restrictToCafcassHmcts))
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
             .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
             .build();
 
@@ -310,34 +391,37 @@ public class ManageDocumentsServiceTest {
 
         ReviewDocuments reviewDocuments = ReviewDocuments.builder().build();
 
+        List<Element<QuarantineLegalDoc>> listQuarantine = new ArrayList<>();
+        listQuarantine.add(quarantineLegalDocElement);
         CaseData caseData = CaseData.builder()
             .reviewDocuments(reviewDocuments)
-            .manageDocuments(List.of(manageDocumentsElement)).build();
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .cafcassQuarantineDocsList(listQuarantine)
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
         CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
         CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
 
         when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
-        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
         when(userService.getUserDetails(auth)).thenReturn(userDetailsCafcassRole);
 
         Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
 
         cafcassQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("cafcassQuarantineDocsList");
-
-        cafcassUploadDocListDocTab = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("cafcassUploadDocListDocTab");
-
+        assertNotNull(cafcassQuarantineDocsList);
+        assertEquals(2,cafcassQuarantineDocsList.size());
         assertNull(caseDataMapUpdated.get("manageDocuments"));
-        assertEquals(1,cafcassQuarantineDocsList.size());
-        assertEquals(0,cafcassUploadDocListDocTab.size());
     }
 
     @Test
-    public void testCopyDocumentIfRestrictedWithCafcassRoleWithNonEmptyCafcassUploadDocListDocTab() {
+    public void testCopyDocumentIfRestrictedWithJudgeRole() {
 
         ManageDocuments manageDocuments = ManageDocuments.builder()
             .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
             .documentCategories(dynamicList)
-            .documentRestrictCheckbox(List.of(restrictToCafcassHmcts))
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
             .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
             .build();
 
@@ -345,6 +429,7 @@ public class ManageDocumentsServiceTest {
         caseDataMapInitial.put("manageDocuments",manageDocuments);
 
         List<Element<QuarantineLegalDoc>> cafcassQuarantineDocsListInitial = new ArrayList<>();
+        cafcassQuarantineDocsListInitial.add(element(QuarantineLegalDoc.builder().build()));
         caseDataMapInitial.put("cafcassQuarantineDocsList",cafcassQuarantineDocsListInitial);
 
         List<Element<QuarantineLegalDoc>> cafcassUploadDocListDocTabInitial = new ArrayList<>();
@@ -361,34 +446,41 @@ public class ManageDocumentsServiceTest {
 
         CaseData caseData = CaseData.builder()
             .reviewDocuments(reviewDocuments)
-            .manageDocuments(List.of(manageDocumentsElement)).build();
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
         CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
         CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
 
         when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
-        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
-        when(userService.getUserDetails(auth)).thenReturn(userDetailsCafcassRole);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsCourtStaffRoleExpectAdmin);
 
         Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
 
-        cafcassQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("cafcassQuarantineDocsList");
-
-        cafcassUploadDocListDocTab = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("cafcassUploadDocListDocTab");
-
+        courtStaffQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("courtStaffQuarantineDocsList");
+        assertNotNull(courtStaffQuarantineDocsList);
+        assertEquals(1,courtStaffQuarantineDocsList.size());
         assertNull(caseDataMapUpdated.get("manageDocuments"));
-        assertEquals(1,cafcassQuarantineDocsList.size());
-        assertEquals(1,cafcassUploadDocListDocTab.size());
+
     }
 
     @Test
-    public void testCopyDocumentIfRestrictedWithCourtStaffRole() {
+    public void testCopyDocumentIfRestrictedWithCourtAdminRoleOld() {
 
         ManageDocuments manageDocuments = ManageDocuments.builder()
             .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
-            .documentCategories(dynamicList)
-            .documentRestrictCheckbox(List.of(restrictToCafcassHmcts))
-            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .documentCategories(DynamicList.builder().value(DynamicListElement.builder().code("test").build()).build())
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().categoryId("test")
+                          .documentFileName("test")
+                          .documentUrl("http://test.com/documents/d848addb-c53f-4ac0-a8ce-0a9e7f4d17ba")
+                          .build())
             .build();
+
+        HashMap hashMap = new HashMap();
+        hashMap.put("testDocument", manageDocuments.getDocument());
 
         Map<String, Object> caseDataMapInitial = new HashMap<>();
         caseDataMapInitial.put("manageDocuments",manageDocuments);
@@ -401,41 +493,144 @@ public class ManageDocumentsServiceTest {
 
         manageDocumentsElement = element(manageDocuments);
 
-        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder().build();
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder().categoryId("test").build();
         quarantineLegalDocElement = element(quarantineLegalDoc);
 
         ReviewDocuments reviewDocuments = ReviewDocuments.builder().build();
 
         CaseData caseData = CaseData.builder()
             .reviewDocuments(reviewDocuments)
-            .manageDocuments(List.of(manageDocumentsElement)).build();
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
         CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
         CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
 
+        when(objectMapper.convertValue(hashMap, QuarantineLegalDoc.class)).thenReturn(quarantineLegalDoc);
         when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
         when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
-        when(userService.getUserDetails(auth)).thenReturn(userDetailsCourtStaffRole);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsCourtAdminRole);
 
         Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
 
-        courtStaffQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("courtStaffQuarantineDocsList");
-
-        courtStaffUploadDocListDocTab = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("courtStaffUploadDocListDocTab");
-
+        List<Element<QuarantineLegalDoc>> restrictedDocuments = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("restrictedDocuments");
+        assertNotNull(restrictedDocuments);
+        assertEquals(1,restrictedDocuments.size());
         assertNull(caseDataMapUpdated.get("manageDocuments"));
-        assertEquals(1,courtStaffQuarantineDocsList.size());
-        assertEquals(0,courtStaffUploadDocListDocTab.size());
+
+
     }
 
     @Test
-    public void testCopyDocumentIfRestrictedWithCourtStaffRoleNonEmptyCourtStaffUploadDocListDocTab() {
+    public void testCopyDocumentIfRestrictedWithSoliRoleWithNonEmptyLegalProfUploadDocListDocTab() {
 
         ManageDocuments manageDocuments = ManageDocuments.builder()
             .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
             .documentCategories(dynamicList)
-            .documentRestrictCheckbox(List.of(restrictToCafcassHmcts))
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
             .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
             .build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        List<Element<QuarantineLegalDoc>> legalProfQuarantineDocsListInitial = new ArrayList<>();
+        caseDataMapInitial.put("legalProfQuarantineDocsList",legalProfQuarantineDocsListInitial);
+
+        List<Element<QuarantineLegalDoc>> legalProfUploadDocListDocTabInitial = new ArrayList<>();
+
+        manageDocumentsElement = element(manageDocuments);
+
+        ReviewDocuments reviewDocuments = ReviewDocuments.builder().legalProfUploadDocListDocTab(legalProfUploadDocListDocTabInitial).build();
+
+        List<Element<QuarantineLegalDoc>> listQuarantine = new ArrayList<>();
+        listQuarantine.add(quarantineLegalDocElement);
+
+        CaseData caseData = CaseData.builder()
+            .reviewDocuments(reviewDocuments)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .legalProfQuarantineDocsList(listQuarantine).build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
+
+        Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
+
+        legalProfQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("legalProfQuarantineDocsList");
+        assertNotNull(legalProfQuarantineDocsList);
+        assertEquals(2,legalProfQuarantineDocsList.size());
+        assertNull(caseDataMapUpdated.get("manageDocuments"));
+    }
+
+    @Test
+    public void testCopyDocumentIfRestrictedWithCafcassRoleWithNonEmptyCafcassUploadDocListDocTab() {
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
+            .documentCategories(dynamicList)
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        List<Element<QuarantineLegalDoc>> cafcassQuarantineDocsListInitial = new ArrayList<>();
+        caseDataMapInitial.put("cafcassQuarantineDocsList",cafcassQuarantineDocsListInitial);
+
+        List<Element<QuarantineLegalDoc>> cafcassUploadDocListDocTabInitial = new ArrayList<>();
+
+        manageDocumentsElement = element(manageDocuments);
+
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder().build();
+        quarantineLegalDocElement = element(quarantineLegalDoc);
+        cafcassUploadDocListDocTabInitial.add(quarantineLegalDocElement);
+        caseDataMapInitial.put("cafcassUploadDocListDocTab",cafcassUploadDocListDocTabInitial);
+
+        ReviewDocuments reviewDocuments = ReviewDocuments.builder().cafcassUploadDocListDocTab(cafcassUploadDocListDocTabInitial).build();
+
+        CaseData caseData = CaseData.builder()
+            .reviewDocuments(reviewDocuments)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsCafcassRole);
+
+        Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
+
+        cafcassQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("cafcassQuarantineDocsList");
+        assertNotNull(cafcassQuarantineDocsList);
+        assertEquals(1,cafcassQuarantineDocsList.size());
+        assertNull(caseDataMapUpdated.get("manageDocuments"));
+    }
+
+
+    @Test
+    public void testCopyDocumentIfRestrictedWithCourtAdminRoleNonEmptyCourtStaffUploadDocListDocTab() {
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
+            .documentCategories(DynamicList.builder().value(DynamicListElement.builder().code("test").label("test").build()).build())
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+                          .documentFileName("test")
+                          .documentUrl("http://test.com/documents/d848addb-c53f-4ac0-a8ce-0a9e7f4d17ba").build())
+            .build();
+        HashMap hashMap = new HashMap();
+        hashMap.put("testDocument", manageDocuments.getDocument());
 
         Map<String, Object> caseDataMapInitial = new HashMap<>();
         caseDataMapInitial.put("manageDocuments",manageDocuments);
@@ -457,23 +652,161 @@ public class ManageDocumentsServiceTest {
 
         CaseData caseData = CaseData.builder()
             .reviewDocuments(reviewDocuments)
-            .manageDocuments(List.of(manageDocumentsElement)).build();
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
         CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
         CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
 
+        when(objectMapper.convertValue(hashMap, QuarantineLegalDoc.class)).thenReturn(quarantineLegalDoc);
         when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
         when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
-        when(userService.getUserDetails(auth)).thenReturn(userDetailsCourtStaffRole);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsCourtAdminRole);
+
 
         Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
 
-        courtStaffQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("courtStaffQuarantineDocsList");
-
-        courtStaffUploadDocListDocTab = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("courtStaffUploadDocListDocTab");
-
+        List<Element<QuarantineLegalDoc>> restrictedDocuments = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("restrictedDocuments");
+        assertNotNull(restrictedDocuments);
+        assertEquals(1,restrictedDocuments.size());
         assertNull(caseDataMapUpdated.get("manageDocuments"));
-        assertEquals(1,courtStaffQuarantineDocsList.size());
-        assertEquals(1,courtStaffUploadDocListDocTab.size());
+
+    }
+
+    @Test
+    public void testMoveDocumentsToRespectiveCategoriesNew() {
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
+            .documentCategories(DynamicList.builder().value(DynamicListElement.builder().code("test").label("test").build()).build())
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        manageDocumentsElement = element(manageDocuments);
+
+        uk.gov.hmcts.reform.prl.models.documents.Document doc = uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+            .documentFileName("Confidential_test.pdf")
+            .documentBinaryUrl("http://test.link")
+            .documentUrl("http://test.link").build();
+
+        HashMap hashMap = new HashMap();
+        hashMap.put("testDocument", doc);
+
+        quarantineLegalDocElement = element(quarantineConfidentialDoc);
+        ReviewDocuments reviewDocuments = ReviewDocuments.builder().build();
+        CaseData caseData = CaseData.builder()
+            .reviewDocuments(reviewDocuments)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(systemUserService.getSysUserToken()).thenReturn("test");
+        when(authTokenGenerator.generate()).thenReturn("test");
+        Resource expectedResource = new ClassPathResource("task-list-markdown.md");
+        HttpHeaders headers = new HttpHeaders();
+        ResponseEntity<Resource> expectedResponse = new ResponseEntity<>(expectedResource, headers, HttpStatus.OK);
+        when(caseDocumentClient
+                 .getDocumentBinary(Mockito.anyString(), Mockito.anyString(), Mockito.anyString()))
+            .thenReturn(expectedResponse);
+        when(caseDocumentClientApi.getDocumentBinary(Mockito.anyString(), Mockito.anyString(), Mockito.any()))
+            .thenReturn(expectedResponse);
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .isConfidential(YesOrNo.Yes)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+                          .documentFileName("test")
+                          .documentUrl("1accfb1e-2574-4084-b97e-1cd53fd14815").build())
+            .isRestricted(YesOrNo.No).categoryId("test").build();
+        when(objectMapper.convertValue(hashMap, QuarantineLegalDoc.class)).thenReturn(quarantineLegalDoc);
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
+
+        manageDocumentsService
+            .moveDocumentsToRespectiveCategoriesNew(quarantineLegalDoc, userDetailsSolicitorRole, caseData, caseDataMapInitial, "Legal adviser");
+        List<Element<QuarantineLegalDoc>> confidentialDocuments = (List<Element<QuarantineLegalDoc>>) caseDataMapInitial.get("confidentialDocuments");
+
+        assertNotNull(confidentialDocuments);
+        assertEquals(1,confidentialDocuments.size());
+        assertEquals("test",confidentialDocuments.get(0).getValue().getDocument().getDocumentFileName());
+
+        assertNotNull(quarantineLegalDoc);
+    }
+
+    @Test
+    public void testCopyDocumentIfRestricted() {
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.RESPONDENT)
+            .documentCategories(DynamicList.builder().value(DynamicListElement.builder().code("test").label("test").build()).build())
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+        HashMap hashMap = new HashMap();
+        hashMap.put("testDocument", manageDocuments.getDocument());
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        List<Element<QuarantineLegalDoc>> legalProfQuarantineDocsListInitial = new ArrayList<>();
+        caseDataMapInitial.put("legalProfQuarantineDocsList",legalProfQuarantineDocsListInitial);
+
+        List<Element<QuarantineLegalDoc>> legalProfUploadDocListDocTabInitial = new ArrayList<>();
+        caseDataMapInitial.put("legalProfUploadDocListDocTab",legalProfUploadDocListDocTabInitial);
+
+        manageDocumentsElement = element(manageDocuments);
+
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .isConfidential(YesOrNo.Yes)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+                          .documentFileName("test")
+                          .documentUrl("1accfb1e-2574-4084-b97e-1cd53fd14815").build())
+            .isRestricted(YesOrNo.Yes).categoryId("test").build();
+
+        quarantineLegalDocElement = element(quarantineLegalDoc);
+        ReviewDocuments reviewDocuments = ReviewDocuments.builder().build();
+
+        CaseData caseData = CaseData.builder()
+            .reviewDocuments(reviewDocuments)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+        when(systemUserService.getSysUserToken()).thenReturn("test");
+        when(authTokenGenerator.generate()).thenReturn("test");
+        Resource expectedResource = new ClassPathResource("task-list-markdown.md");
+        HttpHeaders headers = new HttpHeaders();
+        ResponseEntity<Resource> expectedResponse = new ResponseEntity<>(expectedResource, headers, HttpStatus.OK);
+        when(caseDocumentClient
+                 .getDocumentBinary(Mockito.anyString(), Mockito.anyString(), Mockito.anyString()))
+            .thenReturn(expectedResponse);
+        when(caseDocumentClientApi.getDocumentBinary(Mockito.anyString(), Mockito.anyString(), Mockito.any()))
+            .thenReturn(expectedResponse);
+        when(objectMapper.convertValue(hashMap, QuarantineLegalDoc.class)).thenReturn(quarantineLegalDoc);
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
+
+        Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
+        legalProfQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("legalProfQuarantineDocsList");
+
+        legalProfUploadDocListDocTab = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("legalProfUploadDocListDocTab");
+
+        assertNotNull(legalProfQuarantineDocsList);
+        assertEquals(1,legalProfQuarantineDocsList.size());
+        assertEquals(0,legalProfUploadDocListDocTab.size());
+        assertNull(caseDataMapUpdated.get("manageDocuments"));
     }
 
     @Test
@@ -481,10 +814,13 @@ public class ManageDocumentsServiceTest {
 
         ManageDocuments manageDocuments = ManageDocuments.builder()
             .documentParty(DocumentPartyEnum.RESPONDENT)
-            .documentCategories(dynamicList)
-            .documentRestrictCheckbox(new ArrayList<>())
+            .documentCategories(DynamicList.builder().value(DynamicListElement.builder().code("test").label("test").build()).build())
+            .isRestricted(YesOrNo.No)
+            .isConfidential(YesOrNo.No)
             .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
             .build();
+        HashMap hashMap = new HashMap();
+        hashMap.put("testDocument", manageDocuments.getDocument());
 
         Map<String, Object> caseDataMapInitial = new HashMap<>();
         caseDataMapInitial.put("manageDocuments",manageDocuments);
@@ -503,10 +839,14 @@ public class ManageDocumentsServiceTest {
 
         CaseData caseData = CaseData.builder()
             .reviewDocuments(reviewDocuments)
-            .manageDocuments(List.of(manageDocumentsElement)).build();
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
         CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
         CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
 
+        when(objectMapper.convertValue(hashMap, QuarantineLegalDoc.class)).thenReturn(quarantineLegalDoc);
         when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
         when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
         when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
@@ -517,11 +857,534 @@ public class ManageDocumentsServiceTest {
 
         legalProfUploadDocListDocTab = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("legalProfUploadDocListDocTab");
 
-        assertNull(caseDataMapUpdated.get("manageDocuments"));
+        assertNotNull(legalProfUploadDocListDocTab);
         assertEquals(0,legalProfQuarantineDocsList.size());
         assertEquals(1,legalProfUploadDocListDocTab.size());
+        assertNull(caseDataMapUpdated.get("manageDocuments"));
 
     }
 
+    @Test
+    public void testCopyDocumentIfNotRestrictedAndUploadedOnBehalfOfCourt() {
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.COURT)
+            .documentCategories(dynamicList)
+            .documentRestrictCheckbox(new ArrayList<>())
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+        HashMap hashMap = new HashMap();
+        hashMap.put("internalCorrespondenceDocument", manageDocuments.getDocument());
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        List<Element<QuarantineLegalDoc>> legalProfQuarantineDocsListInitial = new ArrayList<>();
+        caseDataMapInitial.put("legalProfQuarantineDocsList",legalProfQuarantineDocsListInitial);
+
+        List<Element<QuarantineLegalDoc>> legalProfUploadDocListDocTabInitial = new ArrayList<>();
+        caseDataMapInitial.put("legalProfUploadDocListDocTab",legalProfUploadDocListDocTabInitial);
+
+        manageDocumentsElement = element(manageDocuments);
+
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder().build();
+        quarantineLegalDocElement = element(quarantineLegalDoc);
+        ReviewDocuments reviewDocuments = ReviewDocuments.builder().build();
+
+        CaseData caseData = CaseData.builder()
+            .reviewDocuments(reviewDocuments)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(objectMapper.convertValue(hashMap, QuarantineLegalDoc.class)).thenReturn(quarantineLegalDoc);
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsCourtAdminRole);
+
+        Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
+
+        courtStaffUploadDocListDocTab = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("courtStaffUploadDocListDocTab");
+        assertNotNull(courtStaffUploadDocListDocTab);
+        assertEquals(1,courtStaffUploadDocListDocTab.size());
+        assertNull(caseDataMapUpdated.get("manageDocuments"));
+    }
+
+    @Test
+    public void returnTrueIfUserIsCourtStaff() {
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsCourtAdminRole);
+
+        Assert.assertTrue(manageDocumentsService.checkIfUserIsCourtStaff(userDetailsCourtAdminRole));
+    }
+
+    @Test
+    public void returnFalseIfUserIsOtherThanCourtStaff() {
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
+
+        Assert.assertFalse(manageDocumentsService.checkIfUserIsCourtStaff(userDetailsSolicitorRole));
+    }
+
+    @Test
+    public void returnTrueIfCourtSelectedInDocumentParty() {
+        ManageDocuments manageDocument = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.COURT)
+            .documentCategories(dynamicList)
+            .documentRestrictCheckbox(new ArrayList<>())
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+        List<Element<ManageDocuments>> manageDocumentsList = List.of(element(manageDocument));
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocumentsList);
+        CaseData caseData = CaseData.builder()
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(manageDocumentsList)
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+        Assert.assertTrue(manageDocumentsService.isCourtSelectedInDocumentParty(callbackRequest));
+    }
+
+    @Test
+    public void returnFalseIfCourtNotSelectedInDocumentParty() {
+        ManageDocuments manageDocument1 = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.APPLICANT)
+            .documentCategories(dynamicList)
+            .documentRestrictCheckbox(new ArrayList<>())
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+        ManageDocuments manageDocument2 = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.RESPONDENT)
+            .documentCategories(dynamicList)
+            .documentRestrictCheckbox(new ArrayList<>())
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+        List<Element<ManageDocuments>> manageDocumentsList = List.of(element(manageDocument1), element(manageDocument2));
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocumentsList);
+        CaseData caseData = CaseData.builder()
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(manageDocumentsList)
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+        Assert.assertFalse(manageDocumentsService.isCourtSelectedInDocumentParty(callbackRequest));
+    }
+
+    @Test
+    public void testCopyDocumentMidEventIfRestrictedWithSoliRole_whenTriedWithOutReason() {
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
+            .documentCategories(dynamicList)
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
+            .restrictedDetails(null)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        manageDocumentsElement = element(manageDocuments);
+
+        CaseData caseData = CaseData.builder()
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
+
+        List<String>  caseDataMapUpdated = manageDocumentsService.validateRestrictedReason(callbackRequest, userDetailsSolicitorRole);
+
+        assertNotNull(caseDataMapUpdated);
+        assertTrue(!caseDataMapUpdated.isEmpty());
+        assertEquals("You must give a reason why the document should be restricted", caseDataMapUpdated.get(0));
+
+    }
+
+    @Test
+    public void testCopyDocumentMidEventIfRestrictedWithSoliRoleWhenTriedWithReason() {
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
+            .documentCategories(dynamicList)
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
+            .restrictedDetails("Reason")
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        manageDocumentsElement = element(manageDocuments);
+
+        CaseData caseData = CaseData.builder()
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
+
+        List<String>  caseDataMapUpdated = manageDocumentsService.validateRestrictedReason(callbackRequest, userDetailsSolicitorRole);
+
+        assertNotNull(caseDataMapUpdated);
+        assertTrue(caseDataMapUpdated.isEmpty());
+    }
+
+    @Test
+    public void testCopyDocumentMidEventIfNotRestrictedWithSoliRole() {
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
+            .documentCategories(dynamicList)
+            .isRestricted(YesOrNo.No)
+            .isConfidential(YesOrNo.Yes)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        manageDocumentsElement = element(manageDocuments);
+
+        CaseData caseData = CaseData.builder()
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
+
+        List<String>  caseDataMapUpdated = manageDocumentsService.validateRestrictedReason(callbackRequest, userDetailsSolicitorRole);
+        assertNotNull(caseDataMapUpdated);
+        assertTrue(caseDataMapUpdated.isEmpty());
+    }
+
+    @Test
+    public void testUpdateCaseData() {
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+        Map<String, Object> caseDataUpdated = new HashMap<>();
+        manageDocumentsService.updateCaseData(callbackRequest, caseDataUpdated);
+        assertNotNull(callbackRequest);
+    }
+
+    @Test
+    public void validateNonCourtUser() {
+        ManageDocuments manageDocument = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.COURT)
+            .documentCategories(dynamicList)
+            .documentRestrictCheckbox(new ArrayList<>())
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+        List<Element<ManageDocuments>> manageDocumentsList = List.of(element(manageDocument));
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocumentsList);
+        CaseData caseData = CaseData.builder()
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(manageDocumentsList)
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+        UserDetails userDetails = UserDetails.builder().roles(List.of(CAFCASS_ROLE)).build();
+        when(objectMapper.convertValue(callbackRequest.getCaseDetails(), CaseData.class)).thenReturn(caseData);
+        List<String> list = manageDocumentsService.validateCourtUser(callbackRequest, userDetails);
+        Assert.assertNotNull(list);
+        Assert.assertEquals("Only court admin/Judge can select the value 'court' for 'submitting on behalf of'", list.get(0));
+    }
+
+    @Test
+    public void validateCourtUser() {
+        ManageDocuments manageDocument = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.COURT)
+            .documentCategories(dynamicList)
+            .documentRestrictCheckbox(new ArrayList<>())
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+        List<Element<ManageDocuments>> manageDocumentsList = List.of(element(manageDocument));
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments", manageDocumentsList);
+        CaseData caseData = CaseData.builder()
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(manageDocumentsList)
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+        UserDetails userDetails = UserDetails.builder().roles(List.of(COURT_ADMIN_ROLE)).build();
+        when(objectMapper.convertValue(callbackRequest.getCaseDetails(), CaseData.class)).thenReturn(caseData);
+        List<String> list = manageDocumentsService.validateCourtUser(callbackRequest, userDetails);
+        Assert.assertTrue(list.isEmpty());
+    }
+
+    @Test
+    public void moveToConfidentialOrRestricted() {
+        List<Element<QuarantineLegalDoc>> listQuarantine = new ArrayList<>();
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .documentUploadedDate(LocalDateTime.now()).build();
+        listQuarantine.add(element(quarantineLegalDoc));
+
+        QuarantineLegalDoc quarantineLegalDoc2 = QuarantineLegalDoc.builder()
+            .documentUploadedDate(LocalDateTime.now()).build();
+
+        Map<String, Object> caseDataUpdated = new HashMap<>();
+        manageDocumentsService
+            .moveToConfidentialOrRestricted(caseDataUpdated, listQuarantine, quarantineLegalDoc2, CONFIDENTIAL_DOCUMENTS);
+        assertNotNull(caseDataUpdated);
+        List<Element<QuarantineLegalDoc>> confidentialDocuments = (List<Element<QuarantineLegalDoc>>)caseDataUpdated.get("confidentialDocuments");
+        assertEquals(2,confidentialDocuments.size());
+    }
+
+    @Test
+    public void addQuarantineDocumentFields() {
+        QuarantineLegalDoc legalDoc = QuarantineLegalDoc.builder().build();
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder().build();
+        QuarantineLegalDoc blankDocument = manageDocumentsService
+            .addQuarantineDocumentFields(legalDoc, quarantineLegalDoc);
+        assertNotNull(blankDocument);
+    }
+
+    @Test
+    public void addQuarantineDocumentFieldsWithUrl() {
+        QuarantineLegalDoc legalDoc = QuarantineLegalDoc.builder().build();
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc
+            .builder().url(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build()).build();
+        QuarantineLegalDoc urlDocument = manageDocumentsService
+            .addQuarantineDocumentFields(legalDoc, quarantineLegalDoc);
+        assertNotNull(urlDocument);
+        assertNotNull(urlDocument.getUrl());
+    }
+
+    @Test
+    public void appendConfidentialDocumentNameForNonCourtAdmin() {
+        UserDetails userDetails = UserDetails.builder().roles(List.of(SOLICITOR_ROLE)).build();
+        when(userService.getUserDetails(any(String.class))).thenReturn(userDetails);
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
+            .documentCategories(dynamicList)
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+        CaseData caseData = CaseData.builder().build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+
+        Map<String,Object> caseDataUpdated = manageDocumentsService
+            .appendConfidentialDocumentNameForCourtAdmin(callbackRequest, auth);
+        assertNotNull(caseDataUpdated);
+        assertNull(caseDataUpdated.get("manageDocuments"));
+
+    }
+
+    @Test
+    public void appendConfidentialDocumentNameForCourtAdmin() {
+        UserDetails userDetails = UserDetails.builder().roles(List.of(COURT_ADMIN_ROLE)).build();
+        when(userService.getUserDetails(any(String.class))).thenReturn(userDetails);
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        CaseData caseData = CaseData.builder().reviewDocuments(ReviewDocuments.builder().build()).build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+
+        Map<String,Object> caseDataUpdated = manageDocumentsService
+            .appendConfidentialDocumentNameForCourtAdmin(callbackRequest, auth);
+        assertNotNull(caseDataUpdated);
+        assertNull(caseDataUpdated.get("manageDocuments"));
+    }
+
+    @Test
+    public void appendConfidentialDocumentNameForCourtAdminEvrythingFilled() {
+        UserDetails userDetails = UserDetails.builder().roles(List.of(COURT_ADMIN_ROLE)).build();
+        when(userService.getUserDetails(any(String.class))).thenReturn(userDetails);
+
+        List<Element<QuarantineLegalDoc>> quarantineList = new ArrayList<>();
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .hasTheConfidentialDocumentBeenRenamed(YesOrNo.No)
+            .categoryId("MIAMCertificate")
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+                          .documentUrl("00000000-0000-0000-0000-000000000000")
+                          .documentFileName("test").build())
+            .uploaderRole("Staff").build();
+        quarantineLegalDocElement = element(quarantineLegalDoc);
+        quarantineList.add(quarantineLegalDocElement);
+        Map<String, Object> map = new HashMap<>();
+        map.put("miamCertificateDocument", quarantineLegalDoc);
+
+        when(objectMapper.convertValue(quarantineLegalDoc, Map.class)).thenReturn(map);
+        when(objectMapper.convertValue(map.get("miamCertificateDocument"), uk.gov.hmcts.reform.prl.models.documents.Document.class))
+            .thenReturn(quarantineLegalDoc.getDocument());
+
+        uk.gov.hmcts.reform.prl.models.documents.Document doc = uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+            .documentUrl("00000000-0000-0000-0000-000000000000")
+            .documentFileName("test").build();
+
+        Map<String, Object> tempQuarantineObjectMap = new HashMap<>();
+        tempQuarantineObjectMap.put("miamCertificateDocument", doc);
+        tempQuarantineObjectMap.put("hasTheConfidentialDocumentBeenRenamed", YesOrNo.Yes);
+
+        QuarantineLegalDoc updatedQuarantineLegalDocumentObject = QuarantineLegalDoc.builder().miamCertificateDocument(doc)
+            .hasTheConfidentialDocumentBeenRenamed(YesOrNo.Yes).build();
+        when(objectMapper.convertValue(tempQuarantineObjectMap, QuarantineLegalDoc.class)).thenReturn(updatedQuarantineLegalDocumentObject);
+        CaseData caseData = CaseData.builder().reviewDocuments(ReviewDocuments.builder()
+                                                                   .confidentialDocuments(quarantineList).build()).build();
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+
+        Map<String,Object> caseDataUpdated = manageDocumentsService
+            .appendConfidentialDocumentNameForCourtAdmin(callbackRequest, auth);
+
+        assertNotNull(caseDataUpdated);
+        assertNotNull(caseDataUpdated.get("confidentialDocuments"));
+        List<Element<QuarantineLegalDoc>> confidentialDocuments = (List<Element<QuarantineLegalDoc>>)caseDataUpdated.get("confidentialDocuments");
+        assertEquals(YesOrNo.Yes,confidentialDocuments.get(0).getValue().getHasTheConfidentialDocumentBeenRenamed());
+
+    }
+
+    @Test
+    public void appendConfidentialDocumentNameForCourtAdminRestrictedDocuments() {
+        UserDetails userDetails = UserDetails.builder().roles(List.of(COURT_ADMIN_ROLE)).build();
+        when(userService.getUserDetails(any(String.class))).thenReturn(userDetails);
+
+        List<Element<QuarantineLegalDoc>> quarantineList = new ArrayList<>();
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .hasTheConfidentialDocumentBeenRenamed(YesOrNo.No)
+            .categoryId("MIAMCertificate")
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+                          .documentUrl("00000000-0000-0000-0000-000000000000")
+                          .documentFileName("test").build())
+            .uploaderRole("Staff").build();
+        quarantineLegalDocElement = element(quarantineLegalDoc);
+        quarantineList.add(quarantineLegalDocElement);
+        Map<String, Object> map = new HashMap<>();
+        map.put("miamCertificateDocument", quarantineLegalDoc);
+
+        when(objectMapper.convertValue(quarantineLegalDoc, Map.class)).thenReturn(map);
+        when(objectMapper.convertValue(map.get("miamCertificateDocument"), uk.gov.hmcts.reform.prl.models.documents.Document.class))
+            .thenReturn(quarantineLegalDoc.getDocument());
+
+        uk.gov.hmcts.reform.prl.models.documents.Document doc = uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+            .documentUrl("00000000-0000-0000-0000-000000000000")
+            .documentFileName("test").build();
+
+        Map<String, Object> tempQuarantineObjectMap = new HashMap<>();
+        tempQuarantineObjectMap.put("miamCertificateDocument", doc);
+        tempQuarantineObjectMap.put("hasTheConfidentialDocumentBeenRenamed", YesOrNo.Yes);
+
+        QuarantineLegalDoc updatedQuarantineLegalDocumentObject = QuarantineLegalDoc.builder().miamCertificateDocument(doc)
+            .hasTheConfidentialDocumentBeenRenamed(YesOrNo.Yes).build();
+        when(objectMapper.convertValue(tempQuarantineObjectMap, QuarantineLegalDoc.class)).thenReturn(updatedQuarantineLegalDocumentObject);
+        CaseData caseData = CaseData.builder().reviewDocuments(ReviewDocuments.builder()
+                                                                   .restrictedDocuments(quarantineList).build()).build();
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+
+        Map<String,Object> caseDataUpdated = manageDocumentsService
+            .appendConfidentialDocumentNameForCourtAdmin(callbackRequest, auth);
+
+        assertNotNull(caseDataUpdated);
+        assertNotNull(caseDataUpdated.get("restrictedDocuments"));
+        List<Element<QuarantineLegalDoc>> restrictedDocuments = (List<Element<QuarantineLegalDoc>>)caseDataUpdated.get("restrictedDocuments");
+        assertEquals(YesOrNo.Yes,restrictedDocuments.get(0).getValue().getHasTheConfidentialDocumentBeenRenamed());
+    }
+
+    @Test
+    public void testGetQuarantineDocumentForUploaderCafcass() {
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .cafcassQuarantineDocument(uk.gov.hmcts.reform.prl.models.documents.Document
+                                           .builder().documentUrl("http://test.com/documents/d848addb-c53f-4ac0-a8ce-0a9e7f4d17ba").build()).build();
+        uk.gov.hmcts.reform.prl.models.documents.Document document1 = manageDocumentsService
+            .getQuarantineDocumentForUploader("Cafcass", quarantineLegalDoc
+            );
+
+        assertNotNull(document1);
+        assertEquals(quarantineLegalDoc.getCafcassQuarantineDocument().getDocumentUrl(),document1.getDocumentUrl());
+    }
+
+    @Test
+    public void testGetQuarantineDocumentForUploaderBulkScan() {
+
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .url(uk.gov.hmcts.reform.prl.models.documents.Document
+                     .builder().documentUrl("http://test.com/documents/d848addb-c53f-4ac0-a8ce-0a9e7f4d17ba").build()).build();
+
+        uk.gov.hmcts.reform.prl.models.documents.Document document1 = manageDocumentsService
+            .getQuarantineDocumentForUploader("Bulk scan", quarantineLegalDoc
+            );
+
+        assertNotNull(document1);
+        assertEquals(quarantineLegalDoc.url.getDocumentUrl(),document1.getDocumentUrl());
+    }
+
+    @Test
+    public void testGetQuarantineDocumentForUploaderDefault() {
+        uk.gov.hmcts.reform.prl.models.documents.Document document1 = manageDocumentsService
+            .getQuarantineDocumentForUploader(" ",
+                                              QuarantineLegalDoc.builder().build());
+
+        assertNull(document1);
+    }
+
+
+    private static uk.gov.hmcts.reform.ccd.document.am.model.Document testDocument() {
+        uk.gov.hmcts.reform.ccd.document.am.model.Document.Link binaryLink = new uk.gov.hmcts.reform.ccd.document.am.model.Document.Link();
+        binaryLink.href = "http://test.link";
+        uk.gov.hmcts.reform.ccd.document.am.model.Document.Link selfLink = new uk.gov.hmcts.reform.ccd.document.am.model.Document.Link();
+        selfLink.href = "http://test.link";
+
+        uk.gov.hmcts.reform.ccd.document.am.model.Document.Links links = new uk.gov.hmcts.reform.ccd.document.am.model.Document.Links();
+        links.binary = binaryLink;
+        links.self = selfLink;
+
+        uk.gov.hmcts.reform.ccd.document.am.model.Document document = uk.gov.hmcts.reform.ccd.document.am.model.Document.builder().build();
+        document.links = links;
+        document.originalDocumentName = "Confidential_test.pdf";
+        return document;
+    }
 }
 
